Numbers in square brackets ([]) are tracker items on SourceForge with patch
or info related to the entry. <http://sourceforge.net/projects/vpopmail/>

unreleased
  - fixed a configure break where a trivial C test program exits on error with gcc-14.1 due to missing headers
  - vusaged/domain.c: fixed -Wimplicit-function-declaration compilation warning

5.6.1
  - vmysql.c: allow the insertion of a second valias row with the same alias/domain
    when vpopmail is configured with --enable-defaultdelivery and --enable-valias
  - bug fix in mysql.h: wrong definition of VALIAS_TABLE_LAYOUT as it was looking
    for DEFAULTDELIVERY definition instead of DEFAULT_DELIVERY
  - configure.ac: solved all autoconf warnings

5.6.0 - Released 2023/12/11
  - Merge patches from FreeBSD:
    (Peter Pentchev <roam@FreeBSD.org>)
    - authvchkpw.c: Various sanity- and security-related fixes.
      Buffer handling:
        - use snprintf() instead of strncpy() to ensure null-termination;
        - explicitly pass sizeof(var) as a second argument to snprintf() to
          protect against a variable definition changing in the future;
        - display the correct amount of failed-to-allocate memory.
      Fix a misspelling of TCPREMOTEIP that would prevent POP-before-SMTP.
      Enclose a write() into a loop so that it succeeds even for amounts
        too large to write at once.
      Display an error message if the execv() in exec_local() fails and
        propagate the error all the way up to main()'s exit code.
      Extract the indiargs as separate defines so that the port's Makefile may
        modify them easily.
      Mark two function parameters as unused.
      Fix a couple of const-related compiler warnings.
    - backfill.c: String buffer handling fixes.
      - convert a strncpy() to snprintf() to ensure null-termination;
      - explicitly pass sizeof(var) as the second argument of snprintf().
    - vlist.c: Sanity and usage fixes.