@@ -245,12 +245,13 @@ level_index0, level_index1, level_index2, the_dir"
 
 #ifdef DEFAULT_DELIVERY
 #define VALIAS_TABLE_LAYOUT \
-"valias_type tinyint(1) NOT NULL DEFAULT 1 COMMENT '1=forwarder 0=lda', \
+"id int(11) PRIMARY KEY AUTO_INCREMENT, \
+valias_type tinyint(1) NOT NULL DEFAULT 1 COMMENT '1=forwarder 0=lda', \
 alias char(32) NOT NULL, \
 domain char(96) NOT NULL, \
 valias_line text NOT NULL, \
 copy tinyint(1) NOT NULL DEFAULT 0 COMMENT '0=redirect 1=copy&redirect', \
-PRIMARY KEY (alias,domain,valias_type), \
+INDEX (alias,domain,valias_type), \
 INDEX (alias, domain)"
 #else
 #define VALIAS_TABLE_LAYOUT "id int(11) PRIMARY KEY AUTO_INCREMENT, \
